--- a/src/main/resources/templates/frontend/hotel/hotel-roomList.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-roomList.html
@@ -86,10 +86,10 @@
                                     <td th:text="${roomList.roomtype}"></td>
                                     <td th:text="${roomList.roomprice}"></td>
                                     <td>
-                                        <div th:each="image:${roomList.hotelRoomImageList}" class="d-inline-block">
-                                            <img th:src="@{${image.imagePath}}" class="rounded img-com"
-                                                 width="60" height="72" style="display: inline-flex"/>
-                                        </div>
+                                        <!--                                        <div th:each="image:${roomList.hotelRoomImageList}" class="d-inline-block">-->
+                                        <!--                                            <img th:src="@{${image.imagePath}}" class="rounded img-com"-->
+                                        <!--                                                 width="60" height="72" style="display: inline-flex"/>-->
+                                        <!--                                        </div>-->
                                     </td>
 
 
