--- a/src/main/resources/templates/frontend/hotel/EditHotel-form.html
+++ b/src/main/resources/templates/frontend/hotel/EditHotel-form.html
@@ -82,6 +82,23 @@
 
                             <div class="row form-group my-4">
                                 <div class="col-lg-1"></div>
+                                <label class="col-lg-2 col-form-label" for="name">您飯店所屬類型</label>
+                                <div class="col-lg-7">
+                                    <select th:field="*{hotelStyle}" class="form-select"
+                                            aria-label="Default select example">
+                                        <option value="公寓">公寓</option>
+                                        <option value="整間小屋">整間小屋</option>
+                                        <option value="整棟住宅">整棟住宅</option>
+                                        <option value="別墅">別墅</option>
+                                        <option value="專業大飯店">專業大飯店</option>
+                                    </select>
+
+                                </div>
+                            </div>
+
+
+                            <div class="row form-group my-4">
+                                <div class="col-lg-1"></div>
                                 <label class="col-lg-2 col-form-label">縣市行政區</label>
                                 <div class="col-lg-7">
                                     <div class="city-selector-set row">
@@ -114,6 +131,24 @@
                                 </div>
                             </div>
 
+                            <div class="row form-group my-4">
+                                <div class="col-lg-1"></div>
+                                <label class="col-lg-2 col-form-label" for="introduce">介紹一下您的地方</label>
+                                <div class="col-lg-7">
+                                      <textarea th:field="*{introduce}" id="introduce"
+                                                class="form-control"> </textarea>
+                                </div>
+                            </div>
+
+                            <div class="row form-group my-4">
+                                <div class="col-lg-1"></div>
+                                <label class="col-lg-2 col-form-label" for="notional">飯店所屬國家</label>
+                                <div class="col-lg-7">
+                                    <input type="text" th:field="*{notional}" id="notional"
+                                           class="form-control"/>
+                                </div>
+                            </div>
+
 
                             <div class="row form-group my-4">
                                 <div class="col-lg-1"></div>
@@ -122,6 +157,64 @@
                                     <input th:field="*{phone}" id="phone" type="text" class="form-control"
                                            placeholder="02-12345678"/>
                                     <div class="invalid-feedback">請輸入正確的電話格式</div>
+                                </div>
+                            </div>
+
+                            <div class="row form-group my-4">
+                                <div class="col-lg-1"></div>
+                                <label class="col-lg-2 col-form-label" for="Howgoto">房客該如何前往妳的住宿</label>
+                                <div class="col-lg-7">
+                                     <textarea th:field="*{Howgoto}" id="Howgoto"
+                                               class="form-control"> </textarea>
+                                </div>
+                            </div>
+
+
+                            <div class="row form-group my-4">
+                                <div class="col-lg-1"></div>
+                                <label class="col-lg-2 col-form-label" for="status">狀態</label>
+                                <div class="col-lg-7">
+                                    <select th:field="*{status}" class="form-select"
+                                            aria-label="Default select example">
+                                        <option value="營業中">營業中</option>
+                                        <option value="未營業">未業中</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="row form-group my-4">
+                                <div class="col-lg-1"></div>
+                                <label class="col-lg-2 col-form-label" for="hotelArea">您建築評數大小</label>
+                                <div class="col-lg-7">
+                                    <input type="text" th:field="*{hotelArea}" id="hotelArea"
+                                           class="form-control" onkeypress="return my_key(event)"/>
+                                </div>
+                            </div>
+
+                            <div class="row form-group my-4">
+                                <div class="col-lg-1"></div>
+                                <label class="col-lg-2 col-form-label" for="hotelArea">最高容納人數</label>
+                                <div class="col-lg-7">
+                                    <input type="text" th:field="*{peopleCount}" id="peopleCount"
+                                           class="form-control" onkeypress="return my_key(event)"/>
+                                </div>
+                            </div>
+
+                            <div class="row form-group my-4">
+                                <div class="col-lg-1"></div>
+                                <label class="col-lg-2 col-form-label" for="boss_name">業主名稱</label>
+                                <div class="col-lg-7">
+                                    <input type="text" th:field="*{boss_name}" id="boss_name"
+                                           class="form-control"/>
+                                </div>
+                            </div>
+
+                            <div class="row form-group my-4">
+                                <div class="col-lg-1"></div>
+                                <label class="col-lg-2 col-form-label" for="price">平均價位</label>
+                                <div class="col-lg-7">
+                                    <input type="text" th:field="*{price}" id="price"
+                                           class="form-control" onkeypress="return my_key(event)"/>
                                 </div>
                             </div>
 
