--- a/src/main/resources/templates/frontend/hotel/hotel-newRoom.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-newRoom.html
@@ -76,7 +76,8 @@
                             <form method="post" th:action="@{/getNewRoom/{id}(id=${mainHotel.id})}"
                                   th:object="${hotelroom} " enctype="multipart/form-data">
                                 <!--                                <td th:text="${hotelroom.hotel.id}"></td>-->
-                                <td th:text="${hotelroom.id}"></td>
+                                <!--                                <td th:text="${hotelroom.id}"></td>-->
+
                                 <fieldset class="form-group">
                                     <label>房間名稱</label>
                                     <input type="text" th:field="*{roomname}" id="hotelArea"
