--- a/src/main/resources/templates/frontend/ticket/ticket-index.html
+++ b/src/main/resources/templates/frontend/ticket/ticket-index.html
@@ -85,7 +85,7 @@
                                         <!-- <td th:text="${location.carOptions.size()}"></td> -->
                                         <td class="font-weight-bold" th:switch="${ticket.status}">
                                             <div th:case="0" th:text="提交完成"></div>
-                                            <div th:case="1" th:text="審核中" ></div>
+                                            <div th:case="1" th:text="已核准" ></div>
                                             <div th:case="2" th:text="已取消" ></div>
                                             <div th:case="3" th:text="不通過" ></div>
                                             <!-- <div th:case="4" th:text="課程完成"/> -->
