--- a/src/main/resources/templates/frontend/hotel/hotel-roomList.html
+++ b/src/main/resources/templates/frontend/hotel/hotel-roomList.html
@@ -87,11 +87,11 @@
                                     <th>
                                         <a class="btn1" th:href="@{/updateRoom(id=${roomList.id})}">編輯房間</a>
                                     </th>
-                                    <th>
-                                        <a class="btn1 btn-delete" th:href="@{/deleteRoom(id=${roomList.id})}"
-                                           id="deleteAjax">刪除房間</a>
 
+                                    <th>
+                                        <a class="btn1" th:href="@{/deleteRoom(id=${roomList.id})}">刪除房間</a>
                                     </th>
+
 
                                 </tr>
                                 </tbody>
@@ -126,25 +126,56 @@
 
 </script>
 <script>
-    $(".btn-delete").click(function (e) {
-        e.preventDefault(); // 取消原始動作
-        let id = $(this).val();
+    (function ($) {
+        $(document).ready(function () {
+            $('#comment-table').DataTable();
+        });
+    })(jQuery);
+
+    function deleteajax(id) {
+        console.log(id);
         Swal.fire({
+            title: '請問是否要刪除此訂單?',
+            text: "已刪除的訂單無法復原，請再次確認",
             icon: 'warning',
-            title: '確定刪除?',
-            text: "確認刪除後將不可復原",
             showCancelButton: true,
-            confirmButtonColor: '#FF8D29',
-            cancelButtonColor: '#FFCD38',
-            confirmButtonText: '確認',
             cancelButtonText: '取消',
-            reverseButtons: true
+            confirmButtonColor: '#d33',
+            cancelButtonColor: '#3085d6',
+            confirmButtonText: '刪除'
         }).then((result) => {
             if (result.isConfirmed) {
-                $(this).parent().submit();
+                $.ajax({
+                    type: "get",
+                    url: "/gotrip/deleteRoom/" + id,
+
+                    success: function (msg) {
+                        Swal.fire(
+                            '已刪除!',
+                            '訂單已成功刪除!',
+                            'success'
+                        ).then((result) => {
+                            if (result.isConfirmed) {
+                                location.reload();
+                            }
+                        })
+                    },
+                    error: function (msg) {
+                        // console.log(msg.status)
+                        Swal.fire({
+                            icon: 'error',
+                            title: '發生錯誤',
+                            text: 'HTTP 狀態碼為 ' + msg.status,
+                            footer: '<a href="https://developer.mozilla.org/zh-TW/docs/Web/HTTP/Status"  target="_blank">怎麼有這錯誤?</a>'
+                        })
+                    }
+                });
+
+
             }
         })
-    })
+    }
+
 </script>
 
 </body>
